LDEV-4775 update marks more skillfully after edit in monitor